--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "anonymous-bot",
   "version": "1.0.0",
   "description": "Discord Bot for anonymous messages",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --build"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,11 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
+    "ts-node": "^10.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^15.12.2",
+    "typescript": "^4.3.2"
   }
 }
